set seed for df.sample

--- a/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
@@ -984,7 +984,7 @@
     }
    ],
    "source": [
-    "experiment_table.sample(5)"
+    "experiment_table.sample(5, random_state=42)"
    ]
   },
   {
@@ -3993,7 +3993,7 @@
     "    [pd.DataFrame(get_cell_timeseries_dict(experiment_dataset, cell_specimen_id)) for cell_specimen_id in experiment_dataset.dff_traces.reset_index()['cell_specimen_id']]\n",
     ").reset_index(drop=True)\n",
     "\n",
-    "experiment_dataset.tidy_dff_traces.sample(5)"
+    "experiment_dataset.tidy_dff_traces.sample(5, random_state=42)"
    ]
   },
   {
