--- a/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
@@ -989,7 +989,7 @@
    ],
    "source": [
     "# let's print a sample of 5 rows to see what's in the table\n",
-    "experiment_table.sample(5)\n"
+    "experiment_table.sample(5, random_state=42)\n"
    ]
   },
   {
@@ -1519,7 +1519,7 @@
     }
    ],
    "source": [
-    " dataset.cell_specimen_table.sample(3)"
+    " dataset.cell_specimen_table.sample(3, random_state=42)"
    ]
   },
   {
