--- a/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
@@ -1043,7 +1043,7 @@
     }
    ],
    "source": [
-    "behavior_session_table.sample(10)"
+    "behavior_session_table.sample(10, random_state=42)"
    ]
   },
   {
@@ -2945,7 +2945,7 @@
     }
    ],
    "source": [
-    "dataset.licks.sample(5)"
+    "dataset.licks.sample(5, random_state=42)"
    ]
   },
   {
@@ -3063,7 +3063,7 @@
     }
    ],
    "source": [
-    "dataset.rewards.sample(5)"
+    "dataset.rewards.sample(5, random_state=42)"
    ]
   },
   {
@@ -5695,7 +5695,7 @@
     }
    ],
    "source": [
-    "dataset.trials.sample(5)"
+    "dataset.trials.sample(5, random_state=42)"
    ]
   },
   {
