--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_analyzing_behavior_only_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_analyzing_behavior_only_data.ipynb
@@ -2269,7 +2269,7 @@
     }
    ],
    "source": [
-    "behavior_session.licks.sample(5)"
+    "behavior_session.licks.sample(5, random_state=42)"
    ]
   },
   {
@@ -2387,7 +2387,7 @@
     }
    ],
    "source": [
-    "behavior_session.rewards.sample(5)"
+    "behavior_session.rewards.sample(5, random_state=42)"
    ]
   },
   {
